--- a/spec/rails-app-6_0/package.json
+++ b/spec/rails-app-6_0/package.json
@@ -15,6 +15,7 @@
   "resolutions": {
     "@babel/traverse": "^7.24.7",
     "eventsource": "^1.1.1",
-    "json-schema": "^0.4.0"
+    "json-schema": "^0.4.0",
+    "loader-utils": "^1.4.1"
   }
 }
