--- a/spec/rails-app-6_1/package.json
+++ b/spec/rails-app-6_1/package.json
@@ -17,6 +17,7 @@
   "resolutions": {
     "@babel/traverse": "^7.24.7",
     "eventsource": "^1.1.1",
-    "loader-utils": "^1.4.1"
+    "loader-utils": "^1.4.1",
+    "minimist": "^1.2.6"
   }
 }
