--- a/spec/rails-app-6_1/package.json
+++ b/spec/rails-app-6_1/package.json
@@ -18,6 +18,7 @@
     "@babel/traverse": "^7.24.7",
     "eventsource": "^1.1.1",
     "loader-utils": "^1.4.1",
-    "minimist": "^1.2.6"
+    "minimist": "^1.2.6",
+    "url-parse": "^1.5.8"
   }
 }
