--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,6 +157,19 @@ jobs:
           BUNDLE_GEMFILE: *rails_7_0_gemfile
     steps: *rails_steps
 
+  test-all-the-things:
+    parameters:
+      ruby-version:
+        type: string
+      rails-version-with-underscores:
+        type: string
+    working_directory: ~/repo
+    docker:
+      - image: cimg/ruby:<< parameters.ruby-version >>-browsers
+        environment:
+          BUNDLE_GEMFILE: gemfiles/rails_<< parameters.rails-version-with-underscores >>.gemfile
+    steps: *rails_steps
+
 workflows:
   build-test_rails-6-1_ruby-3-1:
     jobs:
@@ -183,3 +196,11 @@ workflows:
   build-test_rails-7-0_ruby-3-3:
     jobs:
       - rails-7-0-and-ruby-3-3-job
+
+  whatisthematrix:
+    jobs:
+      - test-all-the-things:
+          matrix:
+            parameters:
+              ruby-version: ["3.1", "3.2", "3.3"]
+              rails-version-with-underscores: ["6_1", "7_0"]
