--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,26 +4,6 @@
 #
 version: 2.1
 aliases:
-  - &rails_6_1_gemfile
-    gemfiles/rails_6_1.gemfile
-
-  - &rails_7_0_gemfile
-    gemfiles/rails_7_0.gemfile
-
-  - &ruby_3_1_image
-    cimg/ruby:3.1-browsers
-
-  - &ruby_3_2_image
-    cimg/ruby:3.2-browsers
-
-  - &ruby_3_3_image
-    cimg/ruby:3.3-browsers
-
-  - &defaults
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_1_image
-
   - &step_restore_root_cache
     restore_cache:
       keys:
@@ -63,26 +43,14 @@ aliases:
                           --out /tmp/test-results/rspec.xml \
                           ${TEST_FILES}
 
-  - &step_store_test_results
-    store_test_results:
-      path: /tmp/test-results
-
-  - &step_store_test_artifacts
-    store_artifacts:
-      path: /tmp/test-results
-      destination: test-results
-
-  - &step_store_coverage_artifacts
-    store_artifacts:
-      path: coverage
-      destination: coverage
-
 orbs:
   browser-tools: circleci/browser-tools@1.4.8
 
 jobs:
   code-quality-job:
-    <<: *defaults
+    working_directory: ~/repo
+    docker:
+      - image: cimg/ruby:3.1-browsers
     steps:
       - checkout
       - *step_restore_root_cache
@@ -92,70 +60,10 @@ jobs:
           name: run ruby linter (rubocop)
           command: |
             bundle exec rubocop
-
       - run:
           name: run code coverage (flay)
           command: |
             bundle exec rake test:flay
-
-  # build rails 6.1
-  rails-6-1-and-ruby-3-1-job:
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_1_image
-        environment:
-          BUNDLE_GEMFILE: *rails_6_1_gemfile
-    steps: &rails_steps
-      - checkout
-      - browser-tools/install-chrome
-      - browser-tools/install-chromedriver
-      - *step_install_root_dependencies
-      - *step_make_test_output_directory
-      - *step_run_rspec_tests
-      - *step_store_test_results
-      - *step_store_test_artifacts
-      - *step_store_coverage_artifacts
-
-  rails-6-1-and-ruby-3-2-job:
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_2_image
-        environment:
-          BUNDLE_GEMFILE: *rails_6_1_gemfile
-    steps: *rails_steps
-
-  rails-6-1-and-ruby-3-3-job:
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_3_image
-        environment:
-          BUNDLE_GEMFILE: *rails_6_1_gemfile
-    steps: *rails_steps
-
-  # build rails 7.0
-  rails-7-0-and-ruby-3-1-job:
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_1_image
-        environment:
-          BUNDLE_GEMFILE: *rails_7_0_gemfile
-    steps: *rails_steps
-
-  rails-7-0-and-ruby-3-2-job:
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_2_image
-        environment:
-          BUNDLE_GEMFILE: *rails_7_0_gemfile
-    steps: *rails_steps
-
-  rails-7-0-and-ruby-3-3-job:
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_3_image
-        environment:
-          BUNDLE_GEMFILE: *rails_7_0_gemfile
-    steps: *rails_steps
 
   test-all-the-things:
     parameters:
@@ -168,35 +76,23 @@ jobs:
       - image: cimg/ruby:<< parameters.ruby-version >>-browsers
         environment:
           BUNDLE_GEMFILE: gemfiles/rails_<< parameters.rails-version-with-underscores >>.gemfile
-    steps: *rails_steps
+    steps:
+      - checkout
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
+      - *step_install_root_dependencies
+      - *step_make_test_output_directory
+      - *step_run_rspec_tests
+      - store_test_results:
+          path: /tmp/test-results
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: test-results
+      - store_artifacts:
+          path: coverage
+          destination: coverage
 
 workflows:
-  build-test_rails-6-1_ruby-3-1:
-    jobs:
-      - rails-6-1-and-ruby-3-1-job
-      - code-quality-job:
-          requires:
-            - rails-6-1-and-ruby-3-1-job # let primary job fetch all dependencies first
-  build-test_rails-6-1_ruby-3-2:
-    jobs:
-      - rails-6-1-and-ruby-3-2-job
-
-  build-test_rails-6-1_ruby-3-3:
-    jobs:
-      - rails-6-1-and-ruby-3-3-job
-
-  build-test_rails-7-0_ruby-3-1:
-    jobs:
-      - rails-7-0-and-ruby-3-1-job
-
-  build-test_rails-7-0_ruby-3-2:
-    jobs:
-      - rails-7-0-and-ruby-3-2-job
-
-  build-test_rails-7-0_ruby-3-3:
-    jobs:
-      - rails-7-0-and-ruby-3-3-job
-
   whatisthematrix:
     jobs:
       - test-all-the-things:
@@ -204,3 +100,6 @@ workflows:
             parameters:
               ruby-version: ["3.1", "3.2", "3.3"]
               rails-version-with-underscores: ["6_1", "7_0"]
+      - code-quality-job:
+          requires:
+            - test-all-the-things
