--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,183 +3,107 @@
 # Check https://circleci.com/docs/2.0/language-ruby/ for more details
 #
 version: 2.1
-aliases:
-  - &rails_6_1_gemfile
-    gemfiles/rails_6_1.gemfile
-
-  - &rails_7_0_gemfile
-    gemfiles/rails_7_0.gemfile
-
-  - &ruby_3_1_image
-    cimg/ruby:3.1-browsers
-
-  - &ruby_3_2_image
-    cimg/ruby:3.2-browsers
-
-  - &ruby_3_3_image
-    cimg/ruby:3.3-browsers
-
-  - &defaults
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_1_image
-
-  - &step_restore_root_cache
-    restore_cache:
-      keys:
-      - valimail-secure-password-gems-{{ arch }}-{{ checksum "devise-secure_password.gemspec" }}
-
-  - &step_install_root_dependencies
-    run:
-      name: install root dependencies
-      command: |
-        sudo apt-get update
-        sudo apt-get install software-properties-common
-        sudo apt-get -y install libsqlite3-dev
-        gem install bundler
-        bundle config set --local path 'vendor/bundle'
-        bundle install --jobs=4 --retry=3
-
-  - &step_save_root_cache
-    save_cache:
-      paths:
-        - ./vendor/bundle
-      key: valimail-secure-password-gems-{{ arch }}-{{ checksum "devise-secure_password.gemspec" }}
-
-  - &step_make_test_output_directory
-    run:
-      name: create test metadata directory
-      command: mkdir /tmp/test-results
-
-  - &step_run_rspec_tests
-    run:
-      name: run rspec with simplecov
-      command: |
-        TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
-
-        COVERAGE=true bundle exec rspec \
-                          --format progress \
-                          --format RspecJunitFormatter \
-                          --out /tmp/test-results/rspec.xml \
-                          ${TEST_FILES}
-
-  - &step_store_test_results
-    store_test_results:
-      path: /tmp/test-results
-
-  - &step_store_test_artifacts
-    store_artifacts:
-      path: /tmp/test-results
-      destination: test-results
-
-  - &step_store_coverage_artifacts
-    store_artifacts:
-      path: coverage
-      destination: coverage
 
 orbs:
   browser-tools: circleci/browser-tools@1.4.8
 
+commands:
+  restore_root_cache:
+    steps:
+      - restore_cache:
+          keys:
+          - valimail-secure-password-gems-{{ arch }}-{{ checksum "devise-secure_password.gemspec" }}
+
+  install_root_dependencies:
+    steps:
+      - run:
+          command: |
+            sudo apt-get update
+            sudo apt-get install software-properties-common
+            sudo apt-get -y install libsqlite3-dev
+            gem install bundler
+            bundle config set --local path 'vendor/bundle'
+            bundle install --jobs=4 --retry=3
+
+  save_root_cache:
+    steps:
+      - save_cache:
+          paths:
+            - ./vendor/bundle
+          key: valimail-secure-password-gems-{{ arch }}-{{ checksum "devise-secure_password.gemspec" }}
+
+  make_test_output_directory:
+    steps:
+      - run:
+          name: create test metadata directory
+          command: mkdir /tmp/test-results
+
+  run_rspec_tests:
+    steps:
+      - run:
+          name: run rspec with simplecov
+          command: |
+            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
+            COVERAGE=true bundle exec rspec \
+                              --format progress \
+                              --format RspecJunitFormatter \
+                              --out /tmp/test-results/rspec.xml \
+                              ${TEST_FILES}
+
 jobs:
   code-quality-job:
-    <<: *defaults
+    working_directory: ~/repo
+    docker:
+      - image: cimg/ruby:3.1-browsers
     steps:
       - checkout
-      - *step_restore_root_cache
-      - *step_install_root_dependencies
-      - *step_save_root_cache
+      - restore_root_cache
+      - install_root_dependencies
+      - save_root_cache
       - run:
           name: run ruby linter (rubocop)
           command: |
             bundle exec rubocop
-
       - run:
           name: run code coverage (flay)
           command: |
             bundle exec rake test:flay
 
-  # build rails 6.1
-  rails-6-1-and-ruby-3-1-job:
+  test-all-the-things:
+    parameters:
+      ruby-version:
+        type: string
+      rails-version-with-underscores:
+        type: string
     working_directory: ~/repo
     docker:
-      - image: *ruby_3_1_image
+      - image: cimg/ruby:<< parameters.ruby-version >>-browsers
         environment:
-          BUNDLE_GEMFILE: *rails_6_1_gemfile
-    steps: &rails_steps
+          BUNDLE_GEMFILE: gemfiles/rails_<< parameters.rails-version-with-underscores >>.gemfile
+    steps:
       - checkout
       - browser-tools/install-chrome
       - browser-tools/install-chromedriver
-      - *step_install_root_dependencies
-      - *step_make_test_output_directory
-      - *step_run_rspec_tests
-      - *step_store_test_results
-      - *step_store_test_artifacts
-      - *step_store_coverage_artifacts
-
-  rails-6-1-and-ruby-3-2-job:
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_2_image
-        environment:
-          BUNDLE_GEMFILE: *rails_6_1_gemfile
-    steps: *rails_steps
-
-  rails-6-1-and-ruby-3-3-job:
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_3_image
-        environment:
-          BUNDLE_GEMFILE: *rails_6_1_gemfile
-    steps: *rails_steps
-
-  # build rails 7.0
-  rails-7-0-and-ruby-3-1-job:
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_1_image
-        environment:
-          BUNDLE_GEMFILE: *rails_7_0_gemfile
-    steps: *rails_steps
-
-  rails-7-0-and-ruby-3-2-job:
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_2_image
-        environment:
-          BUNDLE_GEMFILE: *rails_7_0_gemfile
-    steps: *rails_steps
-
-  rails-7-0-and-ruby-3-3-job:
-    working_directory: ~/repo
-    docker:
-      - image: *ruby_3_3_image
-        environment:
-          BUNDLE_GEMFILE: *rails_7_0_gemfile
-    steps: *rails_steps
+      - install_root_dependencies
+      - make_test_output_directory
+      - run_rspec_tests
+      - store_test_results:
+          path: /tmp/test-results
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: test-results
+      - store_artifacts:
+          path: coverage
+          destination: coverage
 
 workflows:
-  build-test_rails-6-1_ruby-3-1:
+  testy_mc_testerson:
     jobs:
-      - rails-6-1-and-ruby-3-1-job
+      - test-all-the-things:
+          matrix:
+            parameters:
+              ruby-version: ["3.1", "3.2", "3.3"]
+              rails-version-with-underscores: ["6_1", "7_0"]
       - code-quality-job:
           requires:
-            - rails-6-1-and-ruby-3-1-job # let primary job fetch all dependencies first
-  build-test_rails-6-1_ruby-3-2:
-    jobs:
-      - rails-6-1-and-ruby-3-2-job
-
-  build-test_rails-6-1_ruby-3-3:
-    jobs:
-      - rails-6-1-and-ruby-3-3-job
-
-  build-test_rails-7-0_ruby-3-1:
-    jobs:
-      - rails-7-0-and-ruby-3-1-job
-
-  build-test_rails-7-0_ruby-3-2:
-    jobs:
-      - rails-7-0-and-ruby-3-2-job
-
-  build-test_rails-7-0_ruby-3-3:
-    jobs:
-      - rails-7-0-and-ruby-3-3-job
+            - test-all-the-things
