--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,7 @@ workflows:
           matrix:
             parameters:
               ruby-version: ["3.1", "3.2", "3.3"]
-              rails-version-with-underscores: ["6_1", "7_0"]
+              rails-version-with-underscores: ["6_1", "7_0", "8_0"]
       - code-quality-job:
           requires:
             - test-all-the-things
