fixing and applying rubocop things

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -29,3 +29,6 @@ Rails/RedundantPresenceValidationOnBelongsTo:
 Style/RedundantConstantBase:
   Exclude:
     - 'spec/benchmarks/character_counter.rb'
+
+Naming/PredicateMethod:
+  Enabled: false
